# cadtools

./: INSTALL  Makefile  Makefile.proj  README  cadtools.c  cadtools.h  cnc.h  configure  configure.in  cube.ply  cylinder.ply  dovetail.ply  dummy.c  dummy.h  exboss.c  exboss.h  feature.c  feature.h  fixture.h  lathe.c  lathe.h  machine.c  machine.h  mill.c  mill.h  part.c  part.h  program.c  program.h  protocol.h
mk/: dist.sh
po/: Makefile  fr.po
