# Public domain

PACKAGE("cadtools")
VERSION("1.0-beta")
RELEASE("Face of the Goat")

REGISTER_SECTION("Options specific to cadtools:")
REGISTER("--enable-static",	"Produce a static binary [default: no]")
REGISTER("--enable-warnings",	"Enable compiler warnings [default: no]")
REGISTER("--enable-debug",	"Enable debugging code [default: no]")

C_DEFINE(_CADTOOLS_INTERNAL)
C_DEFINE(_USE_AGAR_STD)
C_DEFINE(_USE_AGAR_QUEUE)
C_DEFINE(_USE_SG_MATH)
C_INCDIR($SRC)
C_NO_SECURE_WARNINGS()
#C_EXTRA_WARNINGS()
#C_FATAL_WARNINGS()

HDEFINE(CADTOOLS_VERSION, "$VERSION")

CHECK(cc)
CHECK(agar, 1.4.1)
CHECK(agar-math, 1.4.1)
CHECK(agar-dev, 1.4.1)
CHECK(freesg, 1.0)
CHECK(pthreads)
CHECK(getopt)

if [ "${HAVE_AGAR}" = "no" ]; then
	echo "*"
	echo "* Agar is not installed on your system. It is required by"
	echo "* this package. See http://libagar.org/"
	echo "*"
	exit 1
fi
if [ "${HAVE_AGAR_MATH}" = "no" ]; then
	echo "*"
	echo "* Cadtools requires the Agar-Math library. Please recompile."
	echo "* Agar without --disable-math."
	echo "*"
	exit 1
fi

if [ "${HAVE_FREESG}" = "no" ]; then
	echo "*"
	echo "* FreeSG is not installed on your system. It is required by"
	echo "* this package. Download it from http://freesg.org/"
	echo "*"
	exit 1
fi
if [ "${HAVE_PTHREADS}" = "no" ]; then
	echo "*"
	echo "* This application requires threads, but I was unable to locate"
	echo "* a POSIX threads library."
	echo "*"
	exit 1
fi

if [ "${enable_warnings}" = "yes" ]; then
	MDEFINE(CFLAGS, "$CFLAGS -Wall -Werror -Wmissing-prototypes")
	MDEFINE(CFLAGS, "$CFLAGS -Wno-unused")
fi
if [ "${enable_debug}" = "yes" ]; then
	C_DEFINE(CAD_DEBUG)
	HDEFINE(CAD_DEBUG, "yes")
	LD_OPTION(-g)
else
	HUNDEF(CAD_DEBUG)
fi
if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi

# Enable NLS if requested explicitely.
if [ "${enable_nls}" = "yes" ]; then
	CHECK(gettext)
	if [ "${HAVE_GETTEXT}" != "yes" ]; then
		echo "*"
		echo "* --enable-nls was given but gettext was not found. Try"
		echo "* running configure again without this option."
		echo "*"
		exit 1
	fi
fi
