# Public domain

PACKAGE("cadtools")
VERSION("1.0-beta")
RELEASE("Face of the Goat")

REGISTER_SECTION("Options specific to cadtools:")
REGISTER("--enable-static",	"Produce a static binary [default: no]")
REGISTER("--enable-warnings",	"Enable compiler warnings [default: no]")
REGISTER("--enable-debug",	"Enable debugging code [default: no]")

C_DEFINE(_CADTOOLS_INTERNAL)
C_DEFINE(_USE_AGAR_STD)
C_DEFINE(_USE_AGAR_QUEUE)
C_DEFINE(_USE_SG_MATH)
C_INCDIR($SRC)
C_NO_SECURE_WARNINGS()
#C_EXTRA_WARNINGS()
#C_FATAL_WARNINGS()

HDEFINE(CADTOOLS_VERSION, "$VERSION")

REQUIRE(cc)
REQUIRE(agar, 1.4.1)
REQUIRE(agar-math, 1.4.1)
REQUIRE(agar-dev, 1.4.1)
REQUIRE(freesg, 1.0.0)
REQUIRE(pthreads)
CHECK(getopt)

if [ "${enable_warnings}" = "yes" ]; then
	C_OPTION(-Wall)
	C_OPTION(-Werror)
	C_OPTION(-Wmissing-prototypes)
	MDEFINE(WNO_UNINITIALIZED, "-Wno-uninitialized")
else
	MDEFINE(WNO_UNINITIALIZED, "")
fi
if [ "${enable_debug}" = "yes" ]; then
	C_DEFINE(CAD_DEBUG)
	HDEFINE(CAD_DEBUG, "yes")
	LD_OPTION(-g)
else
	HUNDEF(CAD_DEBUG)
fi
if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi

# Enable NLS if requested explicitely.
if [ "${enable_nls}" = "yes" ]; then
	CHECK(gettext)
	if [ "${HAVE_GETTEXT}" != "yes" ]; then
		echo "*"
		echo "* --enable-nls was given but gettext was not found. Try"
		echo "* running configure again without this option."
		echo "*"
		exit 1
	fi
fi
